--- a/prac/기본적인구동.md
+++ b/prac/기본적인구동.md
@@ -39,6 +39,8 @@ psql (17.4)
 postgres=#
 
 ```
+<img src="../images/db_check.png">
+
 
 - DB조회 <br/> 
 ```
@@ -62,10 +64,13 @@ postgres=# \dg
  testuser  |            | {group1}
 ```
 
-DB생성
-    postgres=# CREATE DATABASE test_db WITH ENCODING='utf-8' OWNER test_user;
-    CREATE DATABASE
-    
+- DB생성
+```
+postgres=# CREATE DATABASE test_db WITH ENCODING='utf-8' OWNER test_user;
+CREATE DATABASE
+
+
+```    
 DB생성 확인
     postgres=# \l
 
