--- a/prac/기본적인구동.md
+++ b/prac/기본적인구동.md
@@ -44,24 +44,30 @@ postgres=#
 
 - DB조회 <br/> 
 ```
-postgres=# \l    
-   Name    |  Owner   | Encoding | Collate | Ctype |   Access privileges
------------+----------+----------+---------+-------+-----------------------
- postgres  | postgres | UTF8     | en_US   | en_US | 
- mydb      | user1    | UTF8     | en_US   | en_US | 
- template0 | postgres | UTF8     | en_US   | en_US | =c/postgres
- template1 | postgres | UTF8     | en_US   | en_US | =c/postgres
+postgres-# \l
+                                             데이터베이스 목록
+   이름    |  소유주  | 인코딩 | 로케일 제공자 | Collate | Ctype | 로케일 | ICU 룰 |      액세스 권한
+-----------+----------+--------+---------------+---------+-------+--------+--------+-----------------------
+ postgres  | postgres | UTF8   | libc          | C       | en    |        |        |
+ template0 | postgres | UTF8   | libc          | C       | en    |        |        | =c/postgres          +
+           |          |        |               |         |       |        |        | postgres=CTc/postgres
+ template1 | postgres | UTF8   | libc          | C       | en    |        |        | =c/postgres          +
+           |          |        |               |         |       |        |        | postgres=CTc/postgres
+(3개 행)
+
 ```
 - DB사용자 생성, 사용자역할(Role) 조회<br/>
 ```
 postgres=# CREATE USER test_user WITH PASSWORD 'test1234';
 CREATE ROLE
 
-postgres=# \dg
- Role Name | Attributes | Member Of
------------+------------+-----------
- postgres  | Superuser  | {}
- testuser  |            | {group1}
+postgres-# \dg
+                          롤 목록
+  롤 이름  |                      속성
+-----------+------------------------------------------------
+ postgres  | 슈퍼유저, 롤 만들기, DB 만들기, 복제, RLS 통과
+ test_user |
+
 ```
 
 - DB생성
