--- a/prac/기본적인구동.md
+++ b/prac/기본적인구동.md
@@ -1,7 +1,8 @@
 # PostgreSQL 기본구동
 1. DB구동 및 종료
-2. DB접속 및 CRUD 명령
-3. Data 백업 및 복구
+2. DB접속 및 데이터베이스와 사용자 생성
+3. Table 생성 및 CRUD 명령
+4. Data 백업 및 복구
 ---
 
 1. DB구동 및 종료
@@ -20,10 +21,10 @@ Default superuser login: postgres, password: <blank>
 <br/>
 <br/>
 
-2. DB접속 및 CRUD 명령
+2. DB접속 및 데이터베이스와 사용자 생성
 - DB 구동후 접속 <br/>
 ```
-C:> pg_stl start
+PS C:> pg_stl start
 서버를 시작하기 위해 기다리는 중....2025-04-25 15:07:28.295 KST [11780] LOG:  starting PostgreSQL 17.4 on x86_64-windows, compiled by msvc-19.42.34436, 64-bit
 2025-04-25 15:07:28.304 KST [11780] LOG:  listening on IPv6 address "::1", port 5432
 2025-04-25 15:07:28.304 KST [11780] LOG:  listening on IPv4 address "127.0.0.1", port 5432
@@ -32,7 +33,7 @@ C:> pg_stl start
  완료
 서버 시작됨
 
-C:> psql -U postgres 
+PS C:> psql -U postgres 
 psql (17.4)
 도움말을 보려면 "help"를 입력하십시오.
 
@@ -42,7 +43,7 @@ postgres=#
 <img src="../images/db_check.png">
 
 
-- DB조회 <br/> 
+- DB조회 : \l or \list<br/> 
 ```
 postgres-# \l
                                              데이터베이스 목록
@@ -56,7 +57,7 @@ postgres-# \l
 (3개 행)
 
 ```
-- DB사용자 생성, 사용자역할(Role) 조회<br/>
+- DB사용자 생성, 사용자역할(Role) 조회 : \dg or \du <br/>
 ```
 postgres=# CREATE USER test_user WITH PASSWORD 'test1234';
 CREATE ROLE
@@ -69,19 +70,42 @@ postgres-# \dg
  test_user |
 
 ```
+#### Option
+<div>
+<dl> 
+    <dt> psql &emsp;:</dt> 
+    <dd>PostgreSQL의 명령줄 인터페이스(CLI) 도구입니다. <br/> 이를 통해 데이터베이스에 접속하고 SQL 명령을 실행할 수 있습니다. </dd>
+    <dt> -U &emsp;: </dt>
+    <dd>특정 사용자를 지정하기 위한 옵션입니다. </dd>
+    <dt> postgress &emsp;: </dt>
+    <dd>접속하려는 PostgreSQL 사용자의 이름입니다. <br/> 기본적으로 PostgreSQL 설치 시 생성되는 슈퍼유저 계정이 `postgres` 입니다. </dd>
+</dl>
+</div>
 
 - DB생성
 ```
 postgres=# CREATE DATABASE test_db WITH ENCODING='utf-8' OWNER test_user;
 CREATE DATABASE
 
+postgres=# \list
+                                             데이터베이스 목록
+   이름    |  소유주   | 인코딩 | 로케일 제공자 | Collate | Ctype | 로케일 | ICU 룰 |      액세스 권한
+-----------+-----------+--------+---------------+---------+-------+--------+--------+-----------------------
+ postgres  | postgres  | UTF8   | libc          | C       | en    |        |        |
+ template0 | postgres  | UTF8   | libc          | C       | en    |        |        | =c/postgres          +
+           |           |        |               |         |       |        |        | postgres=CTc/postgres
+ template1 | postgres  | UTF8   | libc          | C       | en    |        |        | =c/postgres          +
+           |           |        |               |         |       |        |        | postgres=CTc/postgres
+ test_db   | test_user | UTF8   | libc          | C       | en    |        |        |
+(4개 행)
+
+postgres=# \q
+PS C:>
+
 
 ```    
-DB생성 확인
-    postgres=# \l
 
-DB종료
-    postgres=# \q
+3. Table 생성 및 CRUD 명령
 
 
 3. Data 백업 및 복구
