--- a/prac/기본적인구동.md
+++ b/prac/기본적인구동.md
@@ -70,9 +70,15 @@ postgres-# \dg
  test_user |
 
 ```
-#### Option
-<div>
-<dl> 
+#### Options
+<p align="left">
+<style>
+.indented {
+    text-indent: 30px; /* 들여쓰기 크기 설정 */
+}
+</style>
+
+<dl class="indented"> 
     <dt> psql &emsp;:</dt> 
     <dd>PostgreSQL의 명령줄 인터페이스(CLI) 도구입니다. <br/> 이를 통해 데이터베이스에 접속하고 SQL 명령을 실행할 수 있습니다. </dd>
     <dt> -U &emsp;: </dt>
@@ -80,7 +86,7 @@ postgres-# \dg
     <dt> postgress &emsp;: </dt>
     <dd>접속하려는 PostgreSQL 사용자의 이름입니다. <br/> 기본적으로 PostgreSQL 설치 시 생성되는 슈퍼유저 계정이 `postgres` 입니다. </dd>
 </dl>
-</div>
+</p>
 
 - DB생성
 ```
