--- a/prac/기본적인구동.md
+++ b/prac/기본적인구동.md
@@ -1,8 +1,9 @@
 # PostgreSQL 기본구동
 1. DB구동 및 종료
 2. DB접속 및 데이터베이스와 사용자 생성
-3. Table 생성 및 CRUD 명령
-4. Data 백업 및 복구
+3. 사용자계정 접속으로 Table 생성  
+4. Data CRUD 명령
+5. DB 백업 및 복구
 ---
 
 1. DB구동 및 종료
@@ -24,7 +25,7 @@ Default superuser login: postgres, password: <blank>
 2. DB접속 및 데이터베이스와 사용자 생성
 - DB 구동후 접속 <br/>
 ```
-PS C:> pg_stl start
+PS C:\> pg_ctl start
 서버를 시작하기 위해 기다리는 중....2025-04-25 15:07:28.295 KST [11780] LOG:  starting PostgreSQL 17.4 on x86_64-windows, compiled by msvc-19.42.34436, 64-bit
 2025-04-25 15:07:28.304 KST [11780] LOG:  listening on IPv6 address "::1", port 5432
 2025-04-25 15:07:28.304 KST [11780] LOG:  listening on IPv4 address "127.0.0.1", port 5432
@@ -33,7 +34,7 @@ PS C:> pg_stl start
  완료
 서버 시작됨
 
-PS C:> psql -U postgres 
+PS C:\> psql -U postgres 
 psql (17.4)
 도움말을 보려면 "help"를 입력하십시오.
 
@@ -107,8 +108,56 @@ PS C:>
 
 
 ```    
+<br/>
+<br/>
 
-3. Table 생성 및 CRUD 명령
+3. 사용자계정 접속으로 Table 생성  
+```
+PS C:\> psql -U test_user -d test_db
+psql (17.4)
+도움말을 보려면 "help"를 입력하십시오.
+
+test_db=> 
+CREATE TABLE TB_ADMIN (
+    ADMIN_NO Serial NOT NULL,
+    LOGIN_ID Varchar(20) NOT NULL UNIQUE,
+    PASSWD   Varchar(20) NOT NULL,
+    NICK     Varchar(20) NOT NULL,
+    EMAIL    Varchar(40),
+    PRIMARY KEY (ADMIN_NO)
+) Without Oids;
+CREATE TABLE
+test_db=>
+test_db=> \d tb_admin
+                                      "public.tb_admin" 테이블
+  필드명  |         형태          | 정렬규칙 | NULL허용 |                   초기값
+----------+-----------------------+----------+----------+--------------------------------------------
+ admin_no | integer               |          | not null | nextval('tb_admin_admin_no_seq'::regclass)
+ login_id | character varying(20) |          | not null |
+ passwd   | character varying(20) |          | not null |
+ nick     | character varying(20) |          | not null |
+ email    | character varying(40) |          |          |
+인덱스들:
+    "tb_admin_pkey" PRIMARY KEY, btree (admin_no)
+    "tb_admin_login_id_key" UNIQUE CONSTRAINT, btree (login_id)
 
 
-3. Data 백업 및 복구
+test_db=> select * from tb_admin;
+ admin_no | login_id | passwd | nick | email
+----------+----------+--------+------+-------
+(0개 행)
+
+
+test_db=>
+
+```
+<br/>
+<br/>
+
+4. Data CRUD 명령
+
+
+<br/>
+<br/>
+
+5. DB 백업 및 복구
