--- a/prac/기본적인구동.md
+++ b/prac/기본적인구동.md
@@ -128,6 +128,14 @@ CREATE TABLE TB_ADMIN (
 ) Without Oids;
 CREATE TABLE
 test_db=>
+test_db=> \d
+                    릴레이션 목록
+ 스키마 |         이름          |  형태  |  소유주
+--------+-----------------------+--------+-----------
+ public | tb_admin              | 테이블 | test_user
+ public | tb_admin_admin_no_seq | 시퀀스 | test_user
+(2개 행)
+
 test_db=> \d tb_admin
                                       "public.tb_admin" 테이블
   필드명  |         형태          | 정렬규칙 | NULL허용 |                   초기값
@@ -141,13 +149,6 @@ test_db=> \d tb_admin
     "tb_admin_pkey" PRIMARY KEY, btree (admin_no)
     "tb_admin_login_id_key" UNIQUE CONSTRAINT, btree (login_id)
 
-
-test_db=> select * from tb_admin;
- admin_no | login_id | passwd | nick | email
-----------+----------+--------+------+-------
-(0개 행)
-
-
 test_db=>
 
 ```
@@ -155,9 +156,135 @@ test_db=>
 <br/>
 
 4. Data CRUD 명령
+- 테이블 조회
+```
+test_db=> \d
+                    릴레이션 목록
+ 스키마 |         이름          |  형태  |  소유주
+--------+-----------------------+--------+-----------
+ public | tb_admin              | 테이블 | test_user
+ public | tb_admin_admin_no_seq | 시퀀스 | test_user
+(2개 행)
 
+```
+
+- 데이터 등록
+```
+test_db=> INSERT INTO TB_ADMIN(LOGIN_ID, PASSWD, NICK, EMAIL)
+      VALUES('hong_gd', 'hong123', '홍길동', 'hong@gmail.com');
+INSERT 0 1
+
+test_db=> INSERT INTO TB_ADMIN(LOGIN_ID, PASSWD, NICK, EMAIL)
+      VALUES('jang_nr', 'jang123', '장나라', 'jang@gmail.com');
+INSERT 0 1
+
+```
+- 데이터 조회
+```
+test_db=> SELECT * FROM tb_admin;
+ admin_no | login_id | passwd  |  nick  |     email
+----------+----------+---------+--------+----------------
+        1 | hong_gd  | hong123 | 홍길동 | hong@gmail.com
+        2 | jang_nr  | jang123 | 장나라 | jang@gmail.com
+(2개 행)
+
+```
+- 데이터 수정
+```
+test_db=> UPDATE TB_ADMIN SET NICK='홍길똥' WHERE LOGIN_ID='hong_gd';
+UPDATE 1
+test_db=> UPDATE TB_ADMIN SET NICK='짱나라' WHERE LOGIN_ID='jang_nr';
+UPDATE 1
+test_db=> SELECT * FROM TB_ADMIN;
+ admin_no | login_id | passwd  |  nick  |     email
+----------+----------+---------+--------+----------------
+        1 | hong_gd  | hong123 | 홍길똥 | hong@gmail.com
+        2 | jang_nr  | jang123 | 짱나라 | jang@gmail.com
+(2개 행)
+
+```
+- 데이터 삭제
+```
+test_db=> DELETE FROM TB_ADMIN WHERE LOGIN_ID='hong_gd';
+DELETE 1
+test_db=> SELECT * FROM TB_ADMIN;
+ admin_no | login_id | passwd  |  nick  |     email
+----------+----------+---------+--------+----------------
+        2 | jang_nr  | jang123 | 짱나라 | jang@gmail.com
+(1개 행)
+
+```
 
 <br/>
 <br/>
 
 5. DB 백업 및 복구
+- DB 백업
+```
+test_db=> \quit
+PS C:\>
+PS C:\> cd .\Database\PostgreSQL\data
+PS C:\Database\PostgreSQL\data> ls
+PS C:\Database\PostgreSQL\data> pg_dump -U test_user -d test_db > test_db.bak
+PS C:\Database\PostgreSQL\data> ls
+    디렉터리: C:\Database\PostgreSQL\data
+Mode                 LastWriteTime         Length Name
+----                 -------------         ------ ----
+-a----      2025-04-25   오후 6:06           4922 test_db.bak
+
+```
+
+- DE의 테이블 변경 및 삭제
+```
+PS C:\Database\PostgreSQL\data> psql -U test_user -d test_db
+psql (17.4)
+도움말을 보려면 "help"를 입력하십시오.
+
+test_db=> DROP TABLE tb_admin;
+DROP TABLE
+test_db=> \d
+관련 릴레이션 찾을 수 없음.
+test_db=> \q
+PS C:\Database\PostgreSQL\data>
+
+```
+
+- DB 복구
+```
+C:\Database\PostgreSQL\data>psql -U test_user -d test_db < test_db.bak
+SET
+SET
+.............................
+.............................
+.............................
+SET
+SET
+ set_config
+------------
+
+(1개 행)
+
+C:\Database\PostgreSQL\data>psql -U test_user -d test_db
+psql (17.4)
+도움말을 보려면 "help"를 입력하십시오.
+
+test_db=> \d
+                    릴레이션 목록
+ 스키마 |         이름          |  형태  |  소유주
+--------+-----------------------+--------+-----------
+ public | tb_admin              | 테이블 | test_user
+ public | tb_admin_admin_no_seq | 시퀀스 | test_user
+(2개 행)
+
+```
+
+
+- 복구과정에서 오류 및 수정
+```
+C:\Database\PostgreSQL\data> psql -U test_user -d test_db < test_db.bak
+ERROR:  invalid byte sequence for encoding "UTF8": 0xff
+```
+> + Tip1. Encoding 오류시, 메모장(notepad) 혹은 Editor에서 UTF-8로 다시 저장
+> + Tip2. Powershell에서 < 를 테그로 인식하여 오류가 발생시, cmd 창에서 수행
+
+
